Projet GL/test/src/test/deca/context/valid/increment2/read-float.deca
// Test simple readFloat

// Historique : cree le 11/01/2023

{
    float a;

    a = readFloat();
}