Projet GL/test/src/test/deca/context/invalid/increment5/if-void.deca
// test if void method

// Historique : cree le 20/01/2023

class A{
    void m(){}
}
{
    A a = new A();
    
    //Must be refused
    if(a.m()){
        print("error");
    }
}